# httpd

./: .gitignore  CMakeLists.txt  README.md  main.c
conf/: example.conf  example2.conf
include/: config.h  error.h  http.h  socket.h  sockets.h
include/schema/: host.h  http.h  https.h  socket.h
networking/: socket.c  socket.h
src/: config.c  error.c  http.c  main.c  socket.c  sockets.c
src/tcp/: socket.c  socket.h
